--- a/_doc/sphinxdoc/source/phdoc_templates/my-styles.css
+++ b/_doc/sphinxdoc/source/phdoc_templates/my-styles.css
@@ -1,14 +1,34 @@
-.admonition {
+.admonition-mathdef {
 	color: #424242;
 	background-color: #F9F9F9;
-	margin: 20px 30px;
+	font-size: 14px;
 }
-.admonition-title {
-	font-weight: bold;
+.admonition-todoext {
+	color: #424242;
+	background-color: #F9F9B9;
+	font-size: 14px;
 }
-.body {
-	margin-right: 40px;
+.admonition-faqref {
+	color: #424242;
+	background-color: #F9F9B9;
+	font-size: 14px;
 }
+.admonition-exref {
+	color: #424242;
+	background-color: #F9F9B9;
+	font-size: 14px;
+}
+.admonition-nbref {
+	color: #424242;
+	background-color: #F9F9B9;
+	font-size: 14px;
+}
+.admonition-blocref {
+	color: #424242;
+	background-color: #F9F9B9;
+	font-size: 14px;
+}
+
 .line-block {
 	margin-left: 30px;
 	margin-bottom: 5px;
