--- a/_doc/sphinxdoc/source/phdoc_static/my-styles.css
+++ b/_doc/sphinxdoc/source/phdoc_static/my-styles.css
@@ -29,6 +29,22 @@
 	font-size: 14px;
 }
 
+table {
+    border: 1px solid #dddddd;
+	border-spacing: 2x;
+	padding: 4px;
+}
+
+th, td {
+    border: 1px solid #dddddd;
+	border-spacing: 1px;
+	padding: 2px;
+}
+
+pre.highlight-default {
+	background-color: #b5b5b5;
+}
+
 .line-block {
 	margin-left: 30px;
 	margin-bottom: 5px;
